src/objects/DD_Address__c.object
<CustomObject>
    <description>**** Demo Depot application******
This will store Sales office Address and Alternate address details.</description>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Street__c  + IF( ISBLANK(Street__c),&apos;&apos;,&apos;,&apos; )+  City__c   +  IF( ISBLANK(City__c),&apos;&apos;,&apos;,&apos; ) +  State__r.Name  +  IF( ISBLANK(State__c),&apos;&apos;,&apos;,&apos; ) +  Country_Lookup__r.Name  + IF( ISBLANK(Country_Lookup__c),&apos;&apos;,&apos;,&apos; )  +  Post_Code_ZIP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Shipping Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Lookup__c</fullName>
        <label>Country</label>
        <referenceTo>DD_Country__c</referenceTo>
        <relationshipLabel>Address</relationshipLabel>
        <relationshipName>Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DD_Theatre__c</fullName>
        <label>Theatre</label>
        <picklist>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc_Code__c</fullName>
        <label>Loc Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Shipping Contact Telephone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Post_Code_ZIP__c</fullName>
        <label>Post Code/ZIP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Gross_SF__c</fullName>
        <label>Site Gross SF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Number__c</fullName>
        <label>Site Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <referenceTo>DD_State__c</referenceTo>
        <relationshipLabel>Address</relationshipLabel>
        <relationshipName>Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <description>Telephone for Sales office address</description>
        <label>Telephone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address</pluralLabel>
    <recordTypes>
        <fullName>Alternative_Address</fullName>
        <active>true</active>
        <description>This will store home address of users</description>
        <label>Alternative Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Returned_Address</fullName>
        <active>true</active>
        <description>This will store return information of the product.</description>
        <label>Returned Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Office_Address</fullName>
        <active>true</active>
        <description>This will store sales office  address</description>
        <label>Sales Office</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>